Tiny bug fix: languages dropdown shifted the position of action buttons when the prompt was configured at the bottom.

--- a/spfx-latest/src/shared/components/Speech/Speech.module.scss
+++ b/spfx-latest/src/shared/components/Speech/Speech.module.scss
@@ -23,6 +23,7 @@
 .languages {
   z-index: 0;
   width: 0px;
+  position: absolute;
   :global .ms-Dropdown-title {
     border: 0px;
     height: 10px;
